--- a/platform/servers/web/templates/index.html
+++ b/platform/servers/web/templates/index.html
@@ -31,15 +31,10 @@
                     <div class="inner">
                         
                         <p class="pitch replaced">Put your stamp of approval on the world</p>
-                        <p class="intro">Stamped is a new way to recommend only what you like best&mdash;restaurants, books, movies, music and more.
-                        <span>No noise, no strangers, just the people you trust and the things they love. <a href="#" class="video-launcher">Watch the video</a>.</span></p>
+                        <p class="intro">Stamped is a new way to record and share your favorite things&mdash;restaurants, books, movies, music and more.
+                        <span>No noise, no strangers, just the people you trust and what they love. <a href="#" class="video-launcher">Watch the video</a>.</span></p>
                         <a class="itunes replaced" href="http://itunes.apple.com/us/app/stamped/id467924760?ls=1&mt=8">Free Download. Available in the App Store</a>
                         <div id="tool-tipper">
-                            <span style="width:180px;height:109px;top:14px;right:36px;position:absolute;">
-                                <a href="http://blog.stamped.com/">
-                                    <img src="http://static.stamped.com/assets/img/sxsw_badge.png" alt="SXSW">
-                                </a>
-                            </span>
                             <span class="tip-1 tooltip active" rel="1">
                                 <div class="imager image-rest">
                                     <img src="http://static.stamped.com/assets/img/public-home/intro-stamp-is-five-star.png" alt="intro-stamp-is-five-star" />
